# adatom-spin-dynamics

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .tabignore  README.md  dysprosium_lifetime.ipynb  premerge_script.sh  pyproject.toml
Dy_utils/: dataclasses.py  energy_difference_utils.py  level_splittings.py  operators.py  phonon_process.py  plotting.py
level_splittings/4f5d6s_ns0/: df_6m8.csv  df_7m8.csv  df_m68.csv  df_m76.csv  df_m78.csv
src/: dysprosium_lifetime.ipynb  test.py
src/Dy_utils/: electron_rates.py  level_splittings.py  master_equation.py  operators.py  structures.py
src/dysprosium/: run_master.py
src/dysprosium/utilities/: dataclasses.py  electron_rates.py  energy_difference_utils.py  level_splittings.py  master_equation.py  operators.py  phonon_process.py  plotting.py
src/dysprosium/utilities/level_splittings/4f5d6s_ns0/: df_0f.csv  df_7m6.csv
tests/: test_run.py
utils/: check-tabs.sh
