[tool.poetry]
name = "adatom-spin-dynamics"
version = "0.1.0"
description = ""
authors = ["dsblendo <d.sblend@gmail.com>"]
readme = "README.md"
packages = [{include = "adatom_spin_dynamics"}]

[tool.poetry.dependencies]
python = "^3.8"
autoflake = "^2.0.2"
mypy = "^1.1.1"
numpy = "^1.24.2"
parse = "^1.19.0"
pre-commit = "^3.2.1"
pandas = "^1.5.3"
qutip = "^4.7.1"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
